2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Left-adjusted field is now  specified
	using < rather than '-'. The +, space and leading 0 are
	specified on the precision, not the width.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* rand.c (random): Fix for 64 bit fixnums: stick two random numbers
	together. Otherwise for fixnum moduli, we get only a 32 bit number no
	matter what the modulus is.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Combine ~a and ~s cases, so numbers and
	strings are printed the same way under ~s and ~a.  The only difference
	is printing other kinds of objects.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35026

	* stream.c (format_num): New argument: sign character.
	Rewrote to handle precision, width, zero padding and
	leading sign similarly to printf.
	(vformat): New syntax accepted: a space or + before
	the width specifies that a positive sign is to be
	explicitly written as a space or + character.
	Pass one more argument to vormat_num calls.
	Bugfix: go back to vf_init state after processing ~~.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35136 and cleanup.

	* arith.c (plus, minus, mul, gt, ge, lt, le, exptmod, gcd): Remove
	trailing abort; we already marked uw_throwf as noreturn. This hack
	should not be needed in functions where the last statement is a throw.
	(trunc, expt): Repeated error case handled in one place. Temp variable
	used to avoid two calls to mp_clear. Call to abort removed.
	(mod): Repeated error handed in one place. Plugged memory leak
	by moving throw past mp_clear calls. Call to abort removed.
	(isqrt): Repeated error case handed in one place.

2011-12-21  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Fixed to char literal syntax.

2011-12-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (normalize): Linkage changed to extern.

	* arith.h (normalize): Declared.

	* rand.c (random): Bugfix: normalize the bignum before returning it.
